# dmoj-scraper

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
Assets/: Scraping.py  fichero_data.py  login.py
src/dmoj_scrapper/: Scraping.py  __init__.py  cli.py  file_data.py  login.py  scrapping.py
